{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 238,
  "lineage": "b813e376-957c-9e77-ff82-2eedb8a0d8ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:252380158250:security-group/sg-03b37b54442426bc8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03b37b54442426bc8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0934769ef929c9bfc"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "252380158250",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efbc2931189af811"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "252380158250",
            "id": "sg-03b37b54442426bc8",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:loadbalancer/app/my-project-alb/cfd6215438f876fd",
            "arn_suffix": "app/my-project-alb/cfd6215438f876fd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-project-alb-832660897.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:loadbalancer/app/my-project-alb/cfd6215438f876fd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-project-alb",
            "preserve_host_header": false,
            "region": "eu-north-1",
            "security_groups": [
              "sg-0934769ef929c9bfc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0756c4b9bfcf5ae52"
              },
              {
                "subnet_id": "subnet-0e7a75daa2d4ff71e"
              }
            ],
            "subnets": [
              "subnet-0756c4b9bfcf5ae52",
              "subnet-0e7a75daa2d4ff71e"
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "NLB-Example",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "NLB-Example",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0efbc2931189af811",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:loadbalancer/app/my-project-alb/cfd6215438f876fd"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "my-https-listener",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:listener/app/my-project-alb/cfd6215438f876fd/232b39d898e6d2cf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:targetgroup/mytg1-20260308195038759400000003/84c9d684bfe72e3a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:listener/app/my-project-alb/cfd6215438f876fd/232b39d898e6d2cf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:loadbalancer/app/my-project-alb/cfd6215438f876fd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-north-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "Prod",
              "Name": "NLB-Example",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "NLB-Example",
              "Terraform": "True"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:listener/app/my-project-alb/cfd6215438f876fd/232b39d898e6d2cf"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mytg1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:targetgroup/mytg1-20260308195038759400000003/84c9d684bfe72e3a",
            "arn_suffix": "targetgroup/mytg1-20260308195038759400000003/84c9d684bfe72e3a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:targetgroup/mytg1-20260308195038759400000003/84c9d684bfe72e3a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:252380158250:loadbalancer/app/my-project-alb/cfd6215438f876fd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "false",
            "name": "mytg1-20260308195038759400000003",
            "name_prefix": "mytg1-",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-north-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "NLB-Example",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "NLB-Example",
              "Terraform": "True"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0efbc2931189af811"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:252380158250:targetgroup/mytg1-20260308195038759400000003/84c9d684bfe72e3a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:252380158250:security-group/sg-0934769ef929c9bfc",
            "description": "Security group for my-project-alb application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow ALB to route traffic to VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0934769ef929c9bfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP web traffic from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS web traffic from the internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-project-alb-20260308195038745000000002",
            "name_prefix": "my-project-alb-",
            "owner_id": "252380158250",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "NLB-Example",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "NLB-Example",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efbc2931189af811"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "252380158250",
            "id": "sg-0934769ef929c9bfc",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_vpc_outbound",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:252380158250:security-group-rule/sgr-01d37c68aca986808",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow ALB to route traffic to VPC",
            "from_port": null,
            "id": "sgr-01d37c68aca986808",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0934769ef929c9bfc",
            "security_group_rule_id": "sgr-01d37c68aca986808",
            "tags": {
              "Environment": "Prod",
              "Name": "my-project-alb-allow_vpc_outbound",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "my-project-alb-allow_vpc_outbound",
              "Terraform": "True"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "252380158250",
            "id": "sgr-01d37c68aca986808",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:252380158250:security-group-rule/sgr-0ca60a7d34b820873",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP web traffic from the internet",
            "from_port": 80,
            "id": "sgr-0ca60a7d34b820873",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0934769ef929c9bfc",
            "security_group_rule_id": "sgr-0ca60a7d34b820873",
            "tags": {
              "Environment": "Prod",
              "Name": "my-project-alb-allow_http",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "my-project-alb-allow_http",
              "Terraform": "True"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "252380158250",
            "id": "sgr-0ca60a7d34b820873",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "allow_https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:252380158250:security-group-rule/sgr-0e85a30c172fcdff0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS web traffic from the internet",
            "from_port": 443,
            "id": "sgr-0e85a30c172fcdff0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-0934769ef929c9bfc",
            "security_group_rule_id": "sgr-0e85a30c172fcdff0",
            "tags": {
              "Environment": "Prod",
              "Name": "my-project-alb-allow_https",
              "Terraform": "True"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "my-project-alb-allow_https",
              "Terraform": "True"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "252380158250",
            "id": "sgr-0e85a30c172fcdff0",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:252380158250:internet-gateway/igw-0c33d6961d1e36821",
            "id": "igw-0c33d6961d1e36821",
            "owner_id": "252380158250",
            "region": "eu-north-1",
            "vpc_id": "vpc-0efbc2931189af811"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:252380158250:route-table/rtb-077f5886f78efb1ee",
            "id": "rtb-077f5886f78efb1ee",
            "owner_id": "252380158250",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c33d6961d1e36821",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0efbc2931189af811"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "252380158250",
            "id": "rtb-077f5886f78efb1ee",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b6aae7b397c7b60",
            "region": "eu-north-1",
            "route_table_id": "rtb-077f5886f78efb1ee",
            "subnet_id": "subnet-0e7a75daa2d4ff71e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public_rtb",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07577839ecc847ffd",
            "region": "eu-north-1",
            "route_table_id": "rtb-077f5886f78efb1ee",
            "subnet_id": "subnet-0756c4b9bfcf5ae52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public_rtb",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:252380158250:subnet/subnet-0e7a75daa2d4ff71e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7a75daa2d4ff71e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252380158250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Access": "Public",
              "Name": "subnet_1"
            },
            "tags_all": {
              "Access": "Public",
              "Name": "subnet_1"
            },
            "vpc_id": "vpc-0efbc2931189af811"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "252380158250",
            "id": "subnet-0e7a75daa2d4ff71e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:252380158250:subnet/subnet-0756c4b9bfcf5ae52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0756c4b9bfcf5ae52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252380158250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Access": "Public",
              "Name": "subnet_2"
            },
            "tags_all": {
              "Access": "Public",
              "Name": "subnet_2"
            },
            "vpc_id": "vpc-0efbc2931189af811"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "252380158250",
            "id": "subnet-0756c4b9bfcf5ae52",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:252380158250:vpc/vpc-0efbc2931189af811",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0689a840bde975c1f",
            "default_route_table_id": "rtb-06c9c2b978e85ce13",
            "default_security_group_id": "sg-0629d09a6493fb0db",
            "dhcp_options_id": "dopt-08ac32c36619541ca",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efbc2931189af811",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c9c2b978e85ce13",
            "owner_id": "252380158250",
            "region": "eu-north-1",
            "tags": {
              "Name": "Task13-VPC"
            },
            "tags_all": {
              "Name": "Task13-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "252380158250",
            "id": "vpc-0efbc2931189af811",
            "region": "eu-north-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}